--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,9 @@
-astroid==2.2.5
+dj-database-url==0.5.0
+dj-static==0.0.6
 Django==2.2.4
 djangorestframework==3.10.2
-isort==4.3.21
-lazy-object-proxy==1.4.1
-mccabe==0.6.1
-pylint==2.3.1
+gunicorn==19.9.0
 pytz==2019.2
-six==1.12.0
 sqlparse==0.3.0
-typed-ast==1.4.0
-wrapt==1.11.2
+static3==0.7.0
+psycopg>=2.6.1
